# native_api_1c_macro

./: Cargo.toml  README.md
src/: constants.rs  functions.rs  gen_functions.rs  lib.rs  props.rs  types.rs  types_1c.rs  utils.rs
tests/: functions.rs
tests/to_build/: readme_example.rs
tests/to_build/functions/: blob_type.rs  bool_type.rs  date_type.rs  float_type.rs  int_type.rs  mut_type.rs  str_type.rs
tests/to_build/functions/defaults/: blob_type.rs  bool_type.rs  date_type.rs  float_type.rs  int_type.rs  str_type.rs
tests/to_build/functions/result/: blob_type.rs  bool_type.rs  date_type.rs  float_type.rs  int_type.rs  str_type.rs
