[package]
name = "native_api_1c_macro"
version = "0.9.1"
edition = "2021"
repository = "https://github.com/Sebekerga/native_api_1c_macro"
license = "MIT"
description = "Macro library for Native API 1C"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"

[dev.dependencies]
native_api_1c_core = { path = "../native_api_1c_core" }
